# emes

./: .gitignore  README.md  package-lock.json  package.json
client/: .env.development  .env.production  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/: main.css
client/src/components/: ChatInterface.vue  Classification.vue  Dashboard.vue  FileUploader.vue  MusicPlayer.vue  ResourceBrowser.vue  ToolExplorer.vue  playMusic.vue
client/src/router/: index.ts
client/src/services/: BrowserMCPClient.ts  MCPService.ts  MockMCPServer.ts  axios.ts  sockNsAi.ts
client/src/stores/: mcp.ts
client/src/types/: index.ts
client/src/views/: AboutView.vue  ClassificationView.vue  FileUploaderView.vue  HomeView.vue  MusicPlayerView.vue  PlayMusicView.vue
devs/: Dockerfile  docker-compose.yaml
mp3-player/: Cargo.toml  README.md
mp3-player/src/: main.rs
mp3_player/: Cargo.toml  DEVICE_SELECTION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  demo.sh
mp3_player/examples/: device_selection.rs
mp3_player/src/: audio.rs  cli.rs  decoder.rs  error.rs  main.rs  player.rs  playlist.rs  ui.rs
server/: Cargo.toml  build.rs  rustfmt.toml
server/python/: advanced_audio_ai.py  audio_visualizer_v3.py  greet.py
server/qwen2_vl_cpp/: CMakeLists.txt
server/qwen2_vl_cpp/src/: qwen2.cpp  qwen2.h
server/src/: app_state.rs  main.rs
server/src/api/: mod.rs  routes.rs  utils.rs
server/src/api/filelist/: filelist.rs  mod.rs  routes.rs
server/src/api/led_strip/: lib.rs  mod.rs  routes.rs
server/src/api/player/: lib.rs  mod.rs  routes.rs
server/src/api/playlist/: mod.rs  playlist.rs  routes.rs
server/src/api/py_tasks/: mod.rs  py_tasks.rs  routes.rs
server/src/api/upload/: mod.rs  routes.rs  upload.rs
server/src/dao/: db_state.rs  file_dao.rs  mod.rs  player_led_dao.rs
server/src/player/: lib.rs  mod.rs  player_state.rs
server/src/qwen2_vl/: mod.rs  qwen2_vl_service.rs
server/src/sock_io/: mod.rs  ns_ai.rs
server/src/ws2812/: led_strip_state.rs  lib.rs  mod.rs  strip_task.rs
tokio-mp3-player/: Cargo.toml  README.md
tokio-mp3-player/src/: main.rs
ws2812_rust/: Cargo.toml  README.md
ws2812_rust/examples/: animation.rs  basic.rs  integration_test.rs
ws2812_rust/src/: lib.rs
