[package]
name = "mp3_player"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Audio playback
rodio = "0.17"
cpal = "0.15"

# FFmpeg bindings
ffmpeg-next = "7.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }

# File system operations
walkdir = "2.0"

# Random number generation
rand = "0.8"

[build-dependencies]
pkg-config = "0.3"
