[package]
name = "mp3_player"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
rodio = "0.21.1"
cpal = "0.15"
crossterm = "0.28"
ratatui = "0.29"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav"] }
symphonia-core = "0.5"
symphonia-bundle-mp3 = "0.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
walkdir = "2.5"
rand = "0.8"