[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
rmcp = { version = "0.3.2", features = ["server", "transport-worker", "transport-streamable-http-server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt"] }

[build-dependencies]
cmake = "0.1.54"
