[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
rmcp = { version = "0.3.2", features = ["server", "transport-worker", "transport-streamable-http-server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
futures = "0.3.31"
chrono = "0.4.41"
tokio-util = { version = "0.7.16", features = ["io"] }
socketioxide = { version = "0.16.3", features = ["extensions", "state"] }

[build-dependencies]
cmake = "0.1.54"
